# repository-templates

./: .commitlintrc.json  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .release-it.json  LICENSE  README.md  replace-placeholders  test-base-template  test-docker-python-template  test-docker-template  test-python-template
.devcontainer/: devcontainer-bake.hcl  devcontainer.json  initialize
.github/: ISSUE_TEMPLATE  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: push-workflow.yaml
docs/: index.html
templates/base/: .pre-commit-config.yaml  README.md  apply-template
templates/base/.devcontainer/: devcontainer.json  initialize
templates/docker/: .dive-ci  .pre-commit-config.extend.yaml  .release-it.extends.json  Dockerfile  README.extend.md  apply-template  docker-bake.hcl  merge-pre-commit.yq  merge-release-it.yq
templates/python/: .codecov.yml  .gitignore  .pre-commit-config.extend.yaml  .release-it.extends.json  README.extend.md  apply-template  merge-pre-commit.yq  mkdocs.yml  pyproject.toml
templates/python/.devcontainer/: devcontainer-bake.extend.hcl  devcontainer-bake.layers.extend.hcl-part  devcontainer.extend.json  initialize.extend  merge-devcontainer.yq
templates/python/.github/: merge-settings.yq  settings.extend.yml
templates/python/.github/workflows/: merge-workflow.yq  push-workflow-override.yml  push-workflow.extend.yaml
templates/python/docs/stylesheets/: extra.css
templates/python/src/NEW_PROJECT/: main.py
templates/python/tests/unit/: test_placeholder.py
(+8 files in other folders)
