[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NEW_PROJECT"
version = "0.0.0"
description = "PLACEHOLDER: Project description."
authors = [
    { name = "NEW_ORG" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "mike>=2.2.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings-python>=2.0.3",
    "pytest-cov>=7.0.0",
    "uv>=0.11.7"
]

[tool.setuptools.packages.find]
where = ["src"]
